# webposter

./: .gitignore  openai_tools.json  pyproject.toml
app/: app.py  config.py  google.py  images.py  main.py  models.py  openai.py  schemas.py
app/auth/: authenticate.py  google.py  googleLogin.html
app/config/: __init__.py
app/migrations/models/: 0_20251214001428_init.py  2_20251214004459_testing_if_migration_works.py  3_20251214122417_add_file_upload.py  4_20251214133346_add_file_upload.py  5_20251214142414_imagekit.py
app/models/: __init__.py  posts.py  schemas.py  user.py
app/routers/: pablo.py
migrations/models/: 0_20251212163720_init.py  1_20251214001621_testing_if_migration_works.py
